--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.0.2",
+    "@mantine/core": "^4.2.6",
+    "@mantine/form": "^4.2.6",
+    "@mantine/hooks": "^4.2.6",
+    "@mantine/next": "^4.2.6",
+    "@solana/qr-code-styling": "^1.6.0-beta.0",
+    "emoji-regex": "^10.1.0",
+    "emoji-unicode": "^2.0.1",
+    "emoji-unicode-map": "^1.1.11",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
@@ -20,5 +29,10 @@
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.7.2"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
